# masked-email-backup

./: .gitignore  Cargo.toml  README.md  justfile
docs/: LUA_BEST_PRACTICES.md  PROJECT_STRUCTURE.md
lua/: email_only.lua  json.lua  tsv.lua  xml.lua
src/: actions.rs  cli.rs  config.rs  db.rs  fastmail.rs  main.rs  model.rs  secrets.rs
src/actions/: export.rs  show_emails.rs
src/config/: userconfig.rs
src/db/: disk.rs
src/fastmail/: json.rs  masked_email.rs
src/fastmail/json/: masked_email_get.rs  method_response.rs  session.rs
src/model/: masked_email.rs
src/secrets/: encryption.rs  fastmail.rs  keychain.rs
