[package]
name = "masked-email-cli"
description = "CLI tool to store and manipulate on FastMail Masked Emails"
authors = ["Sergei Grigorev"]
license = "MIT"

version = "0.1.0"
edition = "2021"

[dependencies]
core-foundation = { version = "0.9.3", features = ["mac_os_10_8_features"] }
security-framework = { version = "2.9.2", features = ["OSX_10_15"] }
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["native-tls", "blocking", "json"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4.31", features = ["serde"] }
config = { version = "0.13.3", features = ["toml"] }
dialoguer = "0.11"
dirs = "5.0.1"
clap = "4.4"

[dev-dependencies]
tempfile = "3.8"