[package]
name = "masked-email-cli"
description = "CLI tool to store and manipulate on FastMail Masked Emails"
authors = ["Sergei Grigorev"]
license = "MIT"

version = "0.1.0"
edition = "2021"

[dependencies]
core-foundation = { version = "^0.10.0", features = ["mac_os_10_8_features"] }
security-framework = { version = "^2.11.1", features = ["OSX_10_15"] }
argon2 = "^0.5"
aes-gcm = "^0.10"
zeroize = { version = "^1.8.1", features = ["zeroize_derive"] }
rand_core = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "^0.12.7", features = ["native-tls", "blocking", "json"] }
log = "^0.4"
env_logger = "^0.11.5"
chrono = { version = "^0.4.38", features = ["serde"] }
config = { version = "^0.14.0", features = ["toml"] }
dialoguer = "^0.11"
dirs = "^5.0.1"
clap = "^4.5"
bincode = "^1.3.3"
base64 = "^0.22.1"
thiserror = "^1.0"
skim = "^0.10.4"
mlua = { version = "^0.9.9", features = ["lua54", "serialize"] }

[dev-dependencies]
tempfile = "^3.12.0"

[lints.rust]
unsafe_code = "forbid"
